首頁頭條新聞圖片修正

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/HomeHeadlines.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/HomeHeadlines.cshtml
@@ -56,7 +56,7 @@ else
                                 <li class="c-news-listGroup__item d-flex align-items-center">
                                     <div class="c-news-gridview">
                                         <div class="c-news-img">
-                                            <img src="@item.NewsImage" class="c-news-gridview__img" srcset="themes/images/news/market_news02__3x.jpg 3x" alt="">
+                                            <img src="@item.NewsImage" class="c-news-gridview__img" srcset="" alt="">
                                         </div>
                                         <div class="c-news-gridview__content">
                                             <a href="@item.NewsDetailLink" class="c-news-gridview__title fs-16 text-u-ellipsis-1 text-u-ellipsis-2@mb-only">
