--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -247,6 +247,27 @@
                 });
             });
         }
+        /**
+        * OrderColumn 表格預設排序
+        * @@param {string} linkSelect Select選單data-tag
+        * @@param {string} tableName 表格 data-tag
+        * @@param {string} defaultColumn 預設排序欄位
+        * @@param {string} isTrigger 是否觸發功能,ajax可能第一次Call才需觸發
+        */
+        window.OrderColumn = function (linkSelect,tableName, defaultColumn,isTrigger) {
+            if (isTrigger)
+            {
+                //預設樣式
+                $(`[data-sorting-column="${defaultColumn}"]`, `[data-table-name="${tableName}"]`).addClass('is-desc');
+                let $sortingbox = $(`[data-sorting-linkto="${linkSelect}"]`);
+                let $option = $(`option[data-sorting-column="${defaultColumn}"][data-sorting-class="is-desc"]`, $sortingbox);
+                //同步行動板下拉選單
+                if ($option.length != 0) {
+                    $option.prop('selected', true);
+                    $sortingbox.trigger('change');
+                }
+            }
+        };
 
         EventHandler.AddOnExec('compare-init', function (e) {
             let self = e.target;
