Update : 調整畫面在 1200px 以下時呈現的樣式

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/HomeHeadlines.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/HomeHeadlines.cshtml
@@ -47,7 +47,7 @@ else
                     </div>
                 </div>
 
-                <div class="l-headlines__list">
+                <div class="l-news-headlines__list">
                     <ul class="c-news-listGroup c-news-listGroup--article">
                         @if (Model.Headlines != null)
                         {
