--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -252,15 +252,16 @@
         * @@param {string} linkSelect Select選單data-tag
         * @@param {string} tableName 表格 data-tag
         * @@param {string} defaultColumn 預設排序欄位
+        * @@parmm {string} orderType 排序方式
         * @@param {string} isTrigger 是否觸發功能,ajax可能第一次Call才需觸發
         */
-        window.OrderColumn = function (linkSelect,tableName, defaultColumn,isTrigger) {
+        window.OrderColumn = function (linkSelect,tableName, defaultColumn,orderType,isTrigger) {
             if (isTrigger)
             {
                 //預設樣式
-                $(`[data-sorting-column="${defaultColumn}"]`, `[data-table-name="${tableName}"]`).addClass('is-desc');
+                $(`[data-sorting-column="${defaultColumn}"]`, `[data-table-name="${tableName}"]`).addClass(orderType);
                 let $sortingbox = $(`[data-sorting-linkto="${linkSelect}"]`);
-                let $option = $(`option[data-sorting-column="${defaultColumn}"][data-sorting-class="is-desc"]`, $sortingbox);
+                let $option = $(`option[data-sorting-column="${defaultColumn}"][data-sorting-class="${orderType}"]`, $sortingbox);
                 //同步行動板下拉選單
                 if ($option.length != 0) {
                     $option.prop('selected', true);
