Item 變更紀錄元件 - 表格改為中文欄位

--- a/src/Feature/Toolkit/platform/Views/Feature/Wealth/Toolkit/TableViewer/UserRecord.cshtml
+++ b/src/Feature/Toolkit/platform/Views/Feature/Wealth/Toolkit/TableViewer/UserRecord.cshtml
@@ -248,23 +248,23 @@
         <div class="navbar-content">
             <label class="o-select select-2">
                 <select id="ddlColumeName" class="w3-select">
-                    <option value="11">Created</option>
-                    <option value="1">Id</option>
-                    <option value="2">Category</option>
-                    <option value="3">Action</option>
-                    <option value="4">ItemId</option>
-                    <option value="5">ItemLanguage</option>
-                    <option value="6">ItemVersion</option>
-                    <option value="7">ItemPath</option>
-                    <option value="8">UserName</option>
-                    <option value="9">TaskStack</option>
-                    <option value="10">AdditionalInfo</option>
+                    <option value="11">建立時間</option>
+                    <option value="1">唯一識別碼</option>
+                    <option value="2">類別</option>
+                    <option value="3">執行動作</option>
+                    <option value="4">項目Id</option>
+                    <option value="5">項目語言</option>
+                    <option value="6">項目版本號</option>
+                    <option value="7">項目路徑</option>
+                    <option value="8">使用者名稱</option>
+                    <option value="9">任務堆疊資訊</option>
+                    <option value="10">附加資訊</option>
                 </select>
             </label>
             <label class="o-select select-2">
                 <select id="ddlOrder" class="w3-select">
-                    <option value="0">Desc</option>
-                    <option value="1">Asc</option>
+                    <option value="0">降冪</option>
+                    <option value="1">升冪</option>
                 </select>
             </label>
         </div>
@@ -317,17 +317,17 @@
                     <td style="width:30%;">
                         <label class="o-select select-2">
                             <select class="w3-select" style="width:98%;">
-                                <option value="1">Id</option>
-                                <option value="2">Category</option>
-                                <option value="3">Action</option>
-                                <option value="4">ItemId</option>
-                                <option value="5">ItemLanguage</option>
-                                <option value="6">ItemVersion</option>
-                                <option value="7">ItemPath</option>
-                                <option value="8">UserName</option>
-                                <option value="9">TaskStack</option>
-                                <option value="10">AdditionalInfo</option>
-                                <option value="11">Created</option>
+                                <option value="1">唯一識別碼</option>
+                                <option value="2">類別</option>
+                                <option value="3">執行動作</option>
+                                <option value="4">項目Id</option>
+                                <option value="5">項目語言</option>
+                                <option value="6">項目版本號</option>
+                                <option value="7">項目路徑</option>
+                                <option value="8">使用者名稱</option>
+                                <option value="9">任務堆疊資訊</option>
+                                <option value="10">附加資訊</option>
+                                <option value="11">建立時間</option>
                             </select>
                         </label>
                     </td>
@@ -418,17 +418,17 @@
             <table class="o-table table-1 w3-table w3-bordered hide" cellspacing="0" rules="all" border="1" id="gridViewResult" style="border-collapse:collapse;">
                 <thead>
                     <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Action</th>
-                        <th scope="col">ItemId</th>
-                        <th scope="col">ItemLanguage</th>
-                        <th scope="col">ItemVersion</th>
-                        <th scope="col">ItemPath</th>
-                        <th scope="col">UserName</th>
-                        <th scope="col">TaskStack</th>
-                        <th scope="col">AdditionalInfo</th>
-                        <th scope="col">Created</th>
+                        <th scope="col">唯一識別碼</th>
+                        <th scope="col">類別</th>
+                        <th scope="col">執行動作</th>
+                        <th scope="col">項目Id</th>
+                        <th scope="col">項目語言</th>
+                        <th scope="col">項目版本號</th>
+                        <th scope="col">項目路徑</th>
+                        <th scope="col">使用者名稱</th>
+                        <th scope="col">任務堆疊資訊</th>
+                        <th scope="col">附加資訊</th>
+                        <th scope="col">建立時間</th>
                     </tr>
                 </thead>
                 <tbody>
