行員登出入記錄元件 - 表格改為中文欄位

--- a/src/Feature/Toolkit/platform/Views/Feature/Wealth/Toolkit/TableViewer/SitecoreMemberRecord.cshtml
+++ b/src/Feature/Toolkit/platform/Views/Feature/Wealth/Toolkit/TableViewer/SitecoreMemberRecord.cshtml
@@ -248,16 +248,16 @@
         <div class="navbar-content">
             <label class="o-select select-2">
                 <select id="ddlColumeName" class="w3-select">
-                    <option value="4">Created</option>
+                    <option value="4">建立時間</option>
                     <option value="1">Id</option>
-                    <option value="2">Action</option>
-                    <option value="3">UserName</option>
+                    <option value="2">執行動作</option>
+                    <option value="3">使用者名稱</option>
                 </select>
             </label>
             <label class="o-select select-2">
                 <select id="ddlOrder" class="w3-select">
-                    <option value="0">Desc</option>
-                    <option value="1">Asc</option>
+                    <option value="0">降冪</option>
+                    <option value="1">升冪</option>
                 </select>
             </label>
         </div>
@@ -311,9 +311,9 @@
                         <label class="o-select select-2">
                             <select class="w3-select" style="width:98%;">
                                 <option value="1">Id</option>
-                                <option value="2">Action</option>
-                                <option value="3">UserName</option>
-                                <option value="4">Created</option>
+                                <option value="2">執行動作</option>
+                                <option value="3">使用者名稱</option>
+                                <option value="4">建立時間</option>
                             </select>
                         </label>
                     </td>
@@ -405,9 +405,9 @@
                 <thead>
                     <tr>
                         <th scope="col">Id</th>
-                        <th scope="col">Action</th>
-                        <th scope="col">UserName</th>
-                        <th scope="col">Created</th>
+                        <th scope="col">執行動作</th>
+                        <th scope="col">使用者名稱</th>
+                        <th scope="col">建立時間</th>
                     </tr>
                 </thead>
                 <tbody>
