update: 調整預設前端排序改用click觸發

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
@@ -2349,7 +2349,7 @@
                                         $('[data-table-name="' + template + '"]').attr('data-fixed-columns', true).fixedColumns();
                                         break;
                                 }
-                                OrderColumn(template, template, 'id', 'is-asc', true);
+                                OrderColumn(template, 'id', 'is-asc', true);
                             }
                         }
                     },
