--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
@@ -301,7 +301,7 @@
                     }
                 });
             }
-
+            
             $('table').off('click.sorting').on('click.sorting', '.o-sorting', function (e) {
                 e.preventDefault();
                 // 呼叫 loading
@@ -334,7 +334,7 @@
                 }, 300);
             });
 
-
+            OrderColumn("hotTable", 'ViewCount', 'is-desc', true);
             // 手機版分頁筆數功能
             $('[data-sortingbox="true"]').on('change.sorting', function (e) {
                 // 呼叫 loading
