--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -710,7 +710,7 @@
                     window.loading('hide');
                 }, 300);
             });
-
+            OrderColumn("stockTable", 'MonthlyReturn', 'is-desc', true);
             // 手機版分頁筆數功能
             $('[data-sortingbox="true"]').on('change.sorting', function (e) {
                 // 呼叫 loading
