--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -897,7 +897,7 @@
                     }
                 });
             });
-
+            OrderColumn("bondTable", 'UpsAndDownsMonth', 'is-desc', true);
             // table 排序功能
             $('.o-sorting').on('click.sorting', function (e) {
                 e.preventDefault();
